# ASRLabs

./: .gitignore  README.md  pyproject.toml  requirements.txt
asrlabs/: __init__.py  __main__.py  cli.py  config.py  models.py
asrlabs/align/: __init__.py  base.py  ctc_align.py  qwen3_align.py  whisper_align.py
asrlabs/pipeline/: preprocess.py  runner.py
asrlabs/transcribe/: __init__.py  ark_asr.py  base.py  cohere.py  faster_whisper.py  granite_speech.py  kotoba.py  qwen3_asr.py  whisper.py
asrlabs/utils/: audio.py  formats.py  postprocess.py
docs/superpowers/specs/: 2026-06-24-kotoba-whisper-integration-design.md
sample_project/: config.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_kotoba.py  test_models.py  test_pipeline.py
